--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
       </table>
   </body>
 	<script type="text/javascript" src="main.js"> </script>
+ <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
 </html>
 
